Implement Line Resource API according to OpenAPI2 (#172)
* Implement Line Resource API according to OpenAPI2 v1.6.1
* Improve Line.Route.Segment vertices DTOs in OpenAPI2 v1.6.5
